--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="container">
             <div class="row d-flex align-items-center">
               <div class="col-md-4 header-contact">
-                <p>Let's talk! <strong>+57 444 11 00 35</strong>
+                <p>Let's talk! <strong>+91 8218109345</strong>
                 </p>
               </div>
               <div class="col-md-4 shipping-purchase text-center">
