--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </p>
               </div>
               <div class="col-md-4 shipping-purchase text-center">
-                <p>Free shipping on a purchase value of $200</p>
+                <p>Free shipping on a purchase value of ₹599 and above.</p>
               </div>
               <div class="col-md-4 col-sm-12 user-items">
                 <ul class="d-flex justify-content-end list-unstyled">
