--- a/index.html
+++ b/index.html
@@ -194,11 +194,16 @@
                 <div class="row">
                   <div class="col-md-6">
                     <h2 class="banner-title">Summer Collection</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero ipsum enim pharetra hac.</p>
+                    <p>Explore our latest summer collection featuring trendy designs and comfortable fabrics. Whether you're lounging by the pool or strolling along the beach, our collection has got you covered.</p>
                     <div class="btn-wrap">
-                      <a href="shop.html" class="btn btn-light btn-medium d-flex align-items-center" tabindex="0">Shop it now <i class="icon icon-arrow-io"></i>
+                      <a href="shop.html" class="btn btn-light btn-medium d-flex align-items-center" tabindex="0">Shop Now <i class="icon icon-arrow-io"></i>
                       </a>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
                   </div>
                 </div>
               </div>
@@ -210,18 +215,16 @@
                 <div class="row">
                   <div class="col-md-6">
                     <h2 class="banner-title">Casual Collection</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero ipsum enim pharetra hac.</p>
+                    <p>Discover our latest casual collection, perfect for everyday wear. From comfortable tees to stylish jeans, we have everything you need to create effortless looks.</p>
                     <div class="btn-wrap">
-                      <a href="shop.html" class="btn btn-light btn-light-arrow btn-medium d-flex align-items-center" tabindex="0">Shop it now <i class="icon icon-arrow-io"></i>
+                      <a href="shop.html" class="btn btn-light btn-light-arrow btn-medium d-flex align-items-center" tabindex="0">Shop Now <i class="icon icon-arrow-io"></i>
                       </a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
+            
     </section>
 
     <section id="featured-products" class="product-store padding-large">
