--- a/index.html
+++ b/index.html
@@ -1690,7 +1690,7 @@
         <div class="section-header">
           <h2 class="section-title">Follow our instagram</h2>
         </div>
-        <p>Our official Instagram account <a href="#">@ultras</a> or <a href="#">#ultras_clothing</a>
+        <p>Our official Instagram account <a href="#">@Layman eCommerce</a> or <a href="#">#Layman eCommerce_clothing</a>
         </p>
         <div class="row d-flex flex-wrap justify-content-between">
           <div class="col-lg-2 col-md-4 col-sm-6">
@@ -1780,7 +1780,7 @@
           <div class="row d-flex flex-wrap justify-content-between">
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="footer-menu">
-                <h5 class="widget-title">Ultras</h5>
+                <h5 class="widget-title">Layman eCommerce</h5>
                 <ul class="menu-list list-unstyled">
                   <li class="menu-item">
                     <a href="about.html">About us</a>
@@ -1798,7 +1798,7 @@
                     <a href="#">Affiliate Programme</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Ultras Press</a>
+                    <a href="#">Layman eCommerce Press</a>
                   </li>
                 </ul>
               </div>
@@ -1831,7 +1831,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="footer-menu">
                 <h5 class="widget-title">Contact Us</h5>
-                <p>Do you have any questions or suggestions? <a href="#" class="email">ourservices@ultras.com</a>
+                <p>Do you have any questions or suggestions? <a href="#" class="email">ourservices@Layman eCommerce.com</a>
                 </p>
                 <p>Do you need assistance? Give us a call. <br>
                   <strong>+57 444 11 00 35</strong>
